--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,4 +30,5 @@ anyhow = "1"
 tokio = { version = "1.41.0", features = ["full"] }
 ureq = "2.10.1"
 deno_ast = { version = "0.43.1", features = ["transpiling"] }
+once_cell = "1.20.2"
 
