--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@codemirror/lang-javascript": "^6.2.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-shell": "^2",
+    "@tauri-apps/plugin-store": "~2",
     "@uiw/react-codemirror": "^4.23.6",
     "ai": "^3.4.33",
     "class-variance-authority": "^0.7.0",
@@ -22,6 +24,7 @@
     "lucide-react": "^0.454.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
