--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,9 +23,7 @@ tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 libsql = "0.6.0"
-deno_core = "0.314.2"
-deno_fs = "0.84.0"
-deno_runtime = "0.183.0"
+deno_fs = "0.91.0"
 anyhow = "1"
 tokio = { version = "1.41.0", features = ["full"] }
 ureq = "2.10.1"
@@ -33,3 +31,10 @@ deno_ast = { version = "0.43.1", features = ["transpiling"] }
 once_cell = "1.20.2"
 tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
 tauri-plugin-store = "2"
+
+# Deno integration crates
+deno_core = { version = "0.323.0" }
+deno_runtime = { version = "0.189.0" }
+deno_lib_ext = "=0.6.3"
+dirs = "5.0.1"
+crossbeam-channel = "0.5.13"
