--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@tauri-apps/plugin-store": "~2",
     "@tiptap/extension-document": "^2.10.3",
     "@tiptap/extension-text": "^2.10.3",
+    "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "@uiw/react-codemirror": "^4.23.6",
     "ai": "^3.4.33",
     "class-variance-authority": "^0.7.0",
