--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-shell": "^2",
     "@tauri-apps/plugin-store": "~2",
+    "@tiptap/extension-color": "^2.10.3",
     "@tiptap/extension-document": "^2.10.3",
+    "@tiptap/extension-list-item": "^2.10.3",
     "@tiptap/extension-paragraph": "^2.10.3",
     "@tiptap/extension-text": "^2.10.3",
+    "@tiptap/extension-text-style": "^2.10.3",
     "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
@@ -32,13 +35,15 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
     "@types/node": "^22.9.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/turndown": "^5.0.5",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
