--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tiptap/extension-document": "^2.10.3",
     "@tiptap/extension-list-item": "^2.10.3",
     "@tiptap/extension-paragraph": "^2.10.3",
+    "@tiptap/extension-placeholder": "^2.10.3",
     "@tiptap/extension-text": "^2.10.3",
     "@tiptap/extension-text-style": "^2.10.3",
     "@tiptap/pm": "^2.10.3",
