--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "turndown": "^7.2.0"
+    "turndown": "^7.2.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
