--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.56",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-http": "~2",
