--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ai": "^3.4.33",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "commonmark": "^0.30.0",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.454.0",
     "react": "^18.2.0",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@types/commonmark": "^0.27.9",
     "@types/node": "^22.9.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
