--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@tauri-apps/cli": "^2",
     "@types/commonmark": "^0.27.9",
     "@types/node": "^22.9.0",
