--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.2",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-global-shortcut": "~2",
     "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-shell": "^2",
     "@tauri-apps/plugin-store": "~2",
