--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,3 +38,6 @@ deno_runtime = { version = "0.189.0" }
 deno_lib_ext = "=0.6.3"
 crossbeam-channel = "0.5.13"
 dirs = "5.0.1"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-global-shortcut = "2"
